<resources>
    <string name="app_name">BondoMan</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_twibbon">Twibbon</string>
    <string name="title_scan">Scan</string>
    <string name="title_graph">Graph</string>
    <string name="title_setting">Setting</string>
    <string name="title_login">Login</string>
    <string name="title_add_transaksi">Add Transaction</string>
    <string name="title_update_transaksi">Update Transaction</string>
    <string name="attr_email">Email Address</string>
    <string name="attr_password">Password</string>
    <string name="sentc_welcome">Welcome</string>
    <string name="sentc_loginf">Please login with your information</string>
    <string name="title_judul">Title</string>
    <string name="title_nominal">Amount</string>
    <string name="title_kategori">Category</string>
    <string name="title_lokasi">Address</string>
    <string name="btn_simpan">Save</string>
    <string name="add_transaction">Add New Transaction</string>
    <string name="button_capture">Capture Image</string>
    <string name="scan_title">Scan Result</string>
    <string name="scan_confirm">Do you want to re-scan the image?</string>
    <string name="scan_retry">Retry</string>
    <string name="scan_save">Save</string>
    <string name="graph_title">Amount of Incomes and Expenses</string>
    <string name="get_location">Get location</string>
    <string name="edit_transaction_description">Edit this transaction</string>
    <string name="delete_transaction_description">Delete this transaction</string>
    <string name="btn_update">Update transaction data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_title">Transaction title</string>
    <string name="transaction_address">Transaction address</string>
    <string name="edit_title">Edit Title</string>
    <string name="new_transaction_title">New transaction title</string>
    <string name="amount_of_transaction">Amount of transaction</string>
    <string name="edit_amount">Edit Amount</string>
    <string name="edit_amount_of_transaction">Edit amount of transaction</string>
    <string name="edit_your_location_data">Edit your location data</string>
    <string name="choose_local_images">Choose Local Images</string>
</resources>