<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/baseline_assignment_24"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/baseline_center_focus_strong_24"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/baseline_donut_small_24"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_setting_24"
        android:title="@string/title_setting" />

</menu>