<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.TransactionFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="35dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/editTextJudulLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_judul"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:alpha="0.9"/>

            <EditText
                android:id="@+id/editTextJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:labelFor="@id/editTextJudulLabel"
                android:hint="@string/transaction_title"
                android:textColorHint="@color/cardview_dark_background"
                android:autofillHints="judul" />

            <TextView
                android:id="@+id/editTextNominalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_nominal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:alpha="0.9"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextNominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:labelFor="@id/editTextNominalLabel"
                android:hint="@string/amount_of_transaction"
                android:textColorHint="@color/cardview_dark_background"
                android:autofillHints="nominal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_kategori"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:alpha="0.9"
                android:layout_marginTop="20dp"/>

            <Spinner
                android:id="@+id/editCategory"
                android:layout_width="match_parent"
                android:layout_height="52dp" />

            <TextView
                android:id="@+id/editTextLokasiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_lokasi"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:alpha="0.9"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/editTextLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:labelFor="@id/editTextJudulLabel"
                android:hint="@string/transaction_address"
                android:textColorHint="@color/cardview_dark_background"
                android:autofillHints="lokasi"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cornerRadius="32dp"
                android:text="@string/btn_simpan"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>