<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.update_transaction.UpdateTransactionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="35dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_judul"
                android:textStyle="bold"
                android:alpha="0.7"/>

            <EditText
                android:id="@+id/editTextJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_nominal"
                android:textStyle="bold"
                android:alpha="0.7"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextNominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_lokasi"
                android:textStyle="bold"
                android:alpha="0.7"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonUpdate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cornerRadius="32dp"
                android:text="@string/btn_update"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>